<resources>
    <string name="app_name">Currency</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="rate">Rate :</string>
    <string name="convert">Convert</string>
    <string name="history">History</string>
    <string name="see_all">See All</string>
    <string name="delete_all_history">Delete All History</string>
    <string name="content_desc_back">Back to previous page</string>
</resources>