<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_margin="8dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:contentDescription="@string/content_desc_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:textColor="?titleColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/tvDeleteAll"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icBack"
            />

        <TextView
            android:id="@+id/tvDeleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_history"
            android:textColor="@color/red"
            android:layout_marginEnd="8dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="@id/tvTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintRight_toRightOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:overScrollMode="never"
            tools:listitem="@layout/list_convert_currency_history_item"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintLeft_toLeftOf="@id/tvTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>