<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:background="@color/white"
                >

                <TextView
                    android:id="@+id/tvFromLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tvFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="USD"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:drawableEnd="@drawable/ic_down"
                    app:layout_constraintLeft_toLeftOf="@id/tvFromLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvFromLabel"
                    />

                <ImageView
                    android:id="@+id/icRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintTop_toTopOf="@id/tvFromLabel"
                    app:layout_constraintBottom_toBottomOf="@id/tvFrom"
                    app:layout_constraintLeft_toRightOf="@id/tvFrom"
                    app:layout_constraintRight_toLeftOf="@id/tvTo"
                    />

                <TextView
                    android:id="@+id/tvToLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    app:layout_constraintLeft_toLeftOf="@id/tvTo"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tvTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="USD"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"
                    android:drawableEnd="@drawable/ic_down"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvToLabel"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>